syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
message WellnessData{
  google.protobuf.Timestamp datetime = 1;
  float wellness = 2;
}
message PollutionData{
  google.protobuf.Timestamp datetime = 1;
  float pollution = 2;
}
message CompleteData {
  oneof CompleteData {
    WellnessData wellness = 1;
    PollutionData pollution = 2;
  }
}
service Terminal {
  rpc send_results(CompleteData) returns (google.protobuf.Empty) {}
}
